[project]
name = "classical-cipher-dad"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hamdi-korreshi", email = "hamdikorreshi256@gmail.com" }
]
dependencies = [
    "scikit-learn>=1.5.2",
    "transformers>=4.46.2",
    "torch>=2.5.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.0",
    "sentencepiece>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/classical_cipher_dad"]
